--- a/ShoutOut/ShoutOut/Base.lproj/Main.storyboard
+++ b/ShoutOut/ShoutOut/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="5AF-fT-hY6">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="eGs-m1-8uD">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -255,10 +255,28 @@ Just thought this deserved a shout out. Great work, Jane!
             </objects>
             <point key="canvasLocation" x="1628" y="-477.21139430284859"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="aWh-nC-PDL">
+            <objects>
+                <viewController id="eGs-m1-8uD" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="GMW-Mr-u4x"/>
+                        <viewControllerLayoutGuide type="bottom" id="HBL-CI-58R"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="3EP-3T-v9G">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Wy8-ru-MRb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1078" y="54"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="TYz-Os-EIO">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="5AF-fT-hY6" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="RootViewController" automaticallyAdjustsScrollViewInsets="NO" id="5AF-fT-hY6" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="rC0-3N-WPh">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
